# pjecz-justicia-digital-bootstrap

./: README.md  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
abogados-registrados/: index.html
agenda-audiencias/: index.html
articulos/acuerdos/: index.html
articulos/comunicados-noticias/: index.html
articulos/transmisiones-sesiones/: index.html
content/consultas/: listas-de-acuerdos.html  peritos.html  sentencias.html
content/js/: consultas-api-url.js  consultas-autoridades.js  consultas-distritos.js  consultas-peritos.js  consultas-redam.js  consultas-repsvm.js
edictos/: index.html
edictos/descargar/: index.html
fuentes-rss/: index.html
glosas/: index.html
glosas/descargar/: index.html
js/: consultas-distritos-autoridades.js  consultas-peritos-tipos.js  consultas-tesis-jurisprudencias.js
listas-de-acuerdos/: index.html
listas-de-acuerdos/descargar/: index.html
peritos/: index.html
plugins/pelican_javascript/: pelican_javascript.py
redam/: index.html
repsvm/: index.html
sentencias/: index.html
sentencias/descargar/: index.html
tesis-jurisprudencias/: index.html
theme/css/: consultas.css
themes/pjecz-2020-10/templates/: start.html
themes/pjecz-2025-01/static/css/: pjecz.css
themes/pjecz-2025-01/templates/: base.html  footer-collapse.html  index.html  menu.html  page.html
ubicaciones-expedientes/: index.html
