[tool.poetry]
name = "pjecz-gob-mx-consultas-pelican"
version = "2.1.0"
description = "Sitio web para consultar información hecho con bootstrap y datatables."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ghp-import = "^2.1.0"
markdown = "^3.7"
pelican = "^4.11.0"
pelican-sitemap = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
